# shelly

./: .gitignore  DECISIONS-identity-registry.md  HANDOFF-2026-06-27-artifact-ingest-lag.md  HANDOFF-plugin-harness-audit.md  HANDOFF.md  LICENSE  PLAN-identity-registry.md  README.md  install.sh
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: cask-smoketest.yml  homebrew-cask.yml  js-tests.yml  release-linux.yml  release-macos.yml  rust-tests.yml
assets/mascot/: README.md
companion-app/: board.json  mcp-app.html  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
companion-app/scripts/: smoke.mjs
companion-app/src/: board.ts  mcp-app.ts  server.ts
companion-app/ui/: index.html  main.ts
demo/: video-script.md
demo/artifacts/: demo-harbor-regression.html  demo-northwind-auth.html  demo-tidepool-shipped.html  demo-tidepool-velocity.html
docs/guide/: companion-guide.html  shelly-guide.html
hub/: Cargo.toml  PUBLISHING.md  README.md
hub/src/: agents.rs  config.rs  data.rs  main.rs
hub/webui/: index.html
live/: claude-code-companion--f59e2675.json
overlay/: ARTIFACT-PROTOCOL.md  CANVAS-ARCHITECTURE.md  COLLAPSIBLE-UI-BRIEF.md  LIVE_UI_BRIEF.md  index.html  node_modules  package-lock.json  package.json  vite.demo.config.ts
overlay/dev/: board-harness.html  demo-boot.ts  demo-profile.ts  demo-tour.ts  tauri-mock.ts
overlay/scripts/: check-artifact-deck.ts  check-compact-state.ts  check-demo-loop.ts  check-ingest-rewrite.ts  check-shell-repaint.ts  check-sibling-unread.ts  check-submit-ack.ts  check-unit-identity.ts  check-update-stale.ts  companion  companion-doctor  companion-hook  companion-hub  companion-index.cjs  companion-setup  companion-trace.cjs  companion-uninstall  companion-update  gen-demo-html.mjs  shelly  shelly-doctor  shelly-hook  shelly-hub  shelly-index.cjs  shelly-setup  shelly-trace.cjs  shelly-uninstall  shelly-update  trace-view.mjs
overlay/src/: artifact-view.ts  board-layout.ts  board.css  board.ts  chatbar.ts  clawd.ts  code-peek.ts  compact-logic.ts  crab.ts  deck-logic.ts  edge-resize.ts  history.ts  ingest-logic.ts  live-render.ts  live.ts  main.ts  monaco-env.ts  owned-terminals.ts  platform.ts  popover.ts  prefs.ts  resize.ts  shell-repaint.ts  styles.css  submit-ack.ts  submit.ts  terminal.ts  unit-identity.ts  update-stale.ts
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/capabilities/: default.json
overlay/src-tauri/icons/: icon.icns
overlay/src-tauri/linux/: postinst.sh  prerm.sh
overlay/src-tauri/src/: artifact.rs  artifact_watch.rs  code_peek.rs  codex_wire.rs  dials.rs  events.rs  history.rs  hub.rs  launch.rs  layout.rs  lib.rs  live.rs  macos_panel.rs  main.rs  paths.rs  pty.rs  rate_limit.rs  registry.rs  sessions.rs  test_env.rs  trace.rs  tray.rs  update.rs  usage.rs  windows.rs  worktree.rs
overlay/test-artifacts/: fit-reporter.html  fit-short.html  fit-tall.html  fit-wide.html  inline-js-probe.html
pipeline/: .gitignore  README.md  com.companion.agent-dispatch.plist  com.shelly.agent-dispatch.plist  consolidate.mjs  dispatch.mjs  lib.mjs  setup.mjs  worker-prompt.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: doctor.md  enforce.md  example.md  handoff.md  html.md  mode.md  quality.md  render.md
plugin/hooks/: companion-adopt.cjs  companion-artifact-fork  companion-artifact-fork.cjs  companion-artifact-gate  companion-artifact-gate.cjs  companion-artifact-paths.cjs  companion-charset.cjs  companion-consider  companion-hook  companion-identity.cjs  companion-index.cjs  companion-livepath.sh  companion-observe  companion-session  companion-session-end  companion-skill-log  companion-trace.sh  companion-turn.cjs  hooks.json  prefer-html-enforcer  shelly-adopt.cjs  shelly-artifact-fork  shelly-artifact-fork.cjs  shelly-artifact-gate  shelly-artifact-gate.cjs  shelly-artifact-paths.cjs  shelly-charset.cjs  shelly-hook  shelly-identity.cjs  shelly-index.cjs  shelly-livepath.sh  shelly-session  shelly-session-end  shelly-skill-log  shelly-trace.sh  shelly-turn.cjs
plugin/hooks/__tests__/: README.md  artifact-fork.cjs  artifact-gate.cjs  artifact-seal.cjs  bash-writes.cjs  charset.cjs  codex-provider.cjs  home-adoption.cjs  registry-phase1.cjs  registry-phase2.cjs  registry-phase3.cjs  registry-phase4.cjs  registry-phase5.cjs  run.cjs
plugin/scripts/artifact-observer/: blocks.cjs  capture.cjs  clawd.cjs  components.cjs  designer.cjs  e2e.cjs  lib.cjs  model.cjs  package.json  process.cjs  renderer.cjs  start.cjs  worker.cjs
plugin/scripts/artifact-observer/bench/: BENCH.md  bench.cjs  brief-ab.cjs
plugin/scripts/artifact-observer/test/: observer.test.cjs
plugin/skills/dashboard/: SKILL.md  clawd-snippet.html  crab-snippet.html
plugin/skills/prefer-html/: FEEL-SPEC.md  SKILL.md
plugin/skills/prefer-html/references/: interaction-helper.md
prototype/: status-board.html
