[package]
name = "companion-hub"
version = "0.1.0"
edition = "2021"
description = "Self-hosted hub that serves Companion live-state + artifacts to the overlay and a web UI"
license = "MIT"

[[bin]]
name = "companion-hub"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
