[package]
name = "shelly-hub"
version = "0.1.0"
edition = "2021"
description = "Self-hosted hub that serves Shelly live-state + artifacts to the overlay and a web UI"
license = "MIT"

[[bin]]
name = "shelly-hub"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
