[package]
name = "companion-overlay"
version = "0.1.0"
description = "Ghostly floating overlay that renders Claude's HTML artifacts"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (Windows quirk).
name = "companion_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# DO NOT REMOVE. Production builds must enable this so `generate_context!` embeds
# the frontend (served from tauri://localhost). Without it, tauri-codegen sets
# `dev = true` and the window loads `devUrl` (http://localhost:1420) instead.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
# Native folder picker for "+ New session" (choose where to spawn `claude`).
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Per-session embedded terminals: spawn the real `claude` CLI in a PTY (the only
# ToS-compliant way to use the user's OAuth subscription). Reader thread streams
# output to xterm.js. Ported engine in src/pty.rs.
portable-pty = "0.9"
# Remote-hub client (pull live-state + artifacts from a user-configured hub).
# rustls so there's no system-OpenSSL dependency; blocking client runs on the
# pull-loop's own std thread.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
# Compiled in all builds but only REGISTERED under #[cfg(debug_assertions)] in
# lib.rs (Cargo can't gate deps on debug_assertions). Lets the hypothesi
# tauri-mcp-server drive the dev build (screenshots / DOM / IPC) for headless
# verification. Dead code in release since the plugin is never registered there.
tauri-plugin-mcp-bridge = "0.11"

# macOS-only: reclass the overlay window to a non-activating NSPanel so it can
# show/raise/be-clicked without activating this app (which would steal terminal
# keyboard focus). These versions are already in the dep tree via tao/wry.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSResponder", "NSView", "NSWindow", "NSPanel"] }
# Read the focused terminal window's bounds via CGWindowListCopyWindowInfo (the
# Follow-Ghostty docking mode in layout.rs). Already in the tree via tao/wry.
core-foundation = "0.10"
